# FRONTIER

./: FRONTIER.html  README.md  README_AI_DETAIL_KR.md  README_DEPLOY_KR.md  admin.html  create-room.html  deploy-az-v2.bat  index.html  package.json  pyproject.toml  render.yaml  replays.html  requirements-worker.txt  requirements.txt  robots.txt  send-ranking.mjs  sitemap.xml  train-az-v2-game.bat  train-az-v2.bat  tutorial.html  worker.py  wrangler.jsonc
.github/scripts/: send-ranking.mjs
.github/workflows/: daily-ranking.yml  deploy-ai-worker.yml
cloudflare/: wrangler.jsonc
frontier_ai/: __init__.py  api.py  features.py  game.py  model.py  search.py  train.py  worker.py
frontier_ai/az/: __init__.py  encoding.py  export_onnx.py  mcts.py  net.py  outcomes.py  selfplay.py  serve.py  stats.py  tactics.py  train.py
js/: i18n-dict.js  i18n.js
js/game/: chat.js  elo.js  engine.js  firebase.js  network.js  python-ai-client.js  timer.js  utils.js
js/lobby/: daily.js  titles.js
models/: frontier-model.json
tests/: test_az_mcts.py  test_az_outcomes.py  test_az_stats.py  test_az_tactics.py  test_engine.py  test_search.py
